@startuml

title __TWILIGHTAUTOMATION's Class Diagram__\n

  package objectrepository {
    class AbstractPage {
    }
  }
  

  package manager {
    class ConfigFileManager {
    }
  }
  

  package dataprovider {
    class ConfigFileReader {
    }
  }
  

  package manager {
    class DriverManager {
    }
  }
  

  package objectrepository {
    class HomePage {
    }
  }
  

  package objectrepository {
    class LoginPage {
    }
  }
  

  package manager {
    class PageManager {
    }
  }
  

  package stepdefinitions {
    class StepDefinitionGeneric {
    }
  }
  

  package stepdefinitions {
    class StepDefinitionHome {
    }
  }
  

  package stepdefinitions {
    class StepDefinitionLogin {
    }
  }
  

  package runner {
    class TestRunner {
    }
  }
  

  package dataprovider {
    class WebdriverInjector {
    }
  }
  

  AbstractPage -up-|> FluentWait
  ConfigFileManager o-- ConfigFileReader : configFileReader
  DriverManager o-- ConfigFileReader : fileReader
  HomePage -up-|> AbstractPage
  PageManager o-- AbstractPage : abstractPage
  PageManager o-- HomePage : homePage
  StepDefinitionGeneric o-- WebdriverInjector : webdriverInjector
  StepDefinitionHome o-- WebdriverInjector : webdriverInjector
  StepDefinitionHome o-- AbstractPage : abstractPage
  StepDefinitionHome o-- HomePage : homePage
  StepDefinitionLogin o-- WebdriverInjector : webdriverInjector
  StepDefinitionLogin o-- AbstractPage : abstractPage
  StepDefinitionLogin o-- LoginPage : loginPage
  WebdriverInjector o-- DriverManager : driverManager
  WebdriverInjector o-- PageManager : pageManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
